Apply display block, stop whitespace interferance

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -41,6 +41,7 @@
       width: 100%;
       margin: 0;
       padding: 0px;
+      display: block;
       text-indent: 10px;
       border-right: none;
       @include core-19;
